versioned_docs/version-3.6.0/tributech_agent/sources/simulated_source.mdx
---
title: Simulated Source
sidebar_position: 4
---

import CodeBlock from "@theme/CodeBlock";
import SourceDockerCompose from "!!raw-loader!../examples/agent-source/simulated/docker-compose.yml";
import SourceEnv from "!!raw-loader!../examples/agent-source/simulated/env";

The Tributech Simulated Source allows us to simulate a data source for testing purposes.

## Setup

The Tributech Simulated Source image can be started without any dependencies but will not be functional without a valid Twin Configuration or MessageBroker connect to the Tributech Agent. The TwinConfiguration can be provided via the Tributech Node (recommended) or MessageBroker (see [Source Integration](../source_integration#twin-model)). The Simulated Source will automatically connect to the Tributech Agent if the Tributech Agent is running and the Simulated Source is configured with the correct MessageBroker settings. In the following section we will describe the setup of a Tributech Simulated Source:

- Setup the **_docker environment_** by creating a `.env` file with the following content and replace the placeholder values with your values:

<CodeBlock className="language-plain" title=".env">
  {SourceEnv}
</CodeBlock>

- Setup the **_docker-compose.yml_** file by creating a `docker-compose.yml` file with the following content in the same folder as the `.env` file:

<CodeBlock className="language-yml" title="docker-compose.yml">
  {SourceDockerCompose}
</CodeBlock>

## Configuration

![**Configure agent**](../img/node-agent-configure.png)

Right click the Edge Device and add a Simulated Source:

![**Simulated Source Add**](../img/node-source-simulated-add.png)

Right click the newly added **_Simulated Source_** and add a **_Simulated Stream_**:

![**Simulated Stream Add**](../img/node-source-simulated-add-simulated-stream.png)

Adjust the Stream settings to your needs and save the settings by clicking **_Save in workspace_**:

![**Apply Stream Settings**](../img/node-source-simulated-add-stream.png)

Repeat this step for every stream you need.

After saving all streams in the workspace we can send the configuration to the Tributech Agent and update currently running Tributech Source configuration by clicking **_Apply configuration_**
![**Save Simulated Source0**](../img/node-source-simulated-apply.png)

### Value Change Options (VCO) Handling {#value-change-options}

The basic handling of VCO can be found in [Source Integration](../source_integration.md). This section contains the concrete handling of the **_Step (Delta)_** for the simulated source. The following list contains the description for each supported **_Stream Data Encoding_** where **_X_** represents the value for **_Step (Delta)_**:

- **_Double_**, **_Int32_**, **_Long_**, **_Float_**: defines the minimum difference between values to be submitted, the change is always compared to the last successful submitted value, e.g. if **_X_**= 3 if the double values 1, 2, 5, 8, 10, 11, 14 are received by the Tributech Source only 1, 5, 8, 11, 14 will be submitted.
- **_Byte Array_**: will only be submitted if the current and last submitted value are not equal
- **_String UTF 8_**: will only be submitted if the current and last submitted value are not equal
- **_Boolean_**: will only be submitted if the current and last submitted value are not equal
